<resources>
    <string name="app_name">softsignproj</string>
    <string name="prompt_user">Enter username</string>
    <string name="prompt_password">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="textview">Events</string>
    <string name="goHome">Go to the home page</string>
    <string name="filter">Filter by venue:</string>
    <string name="default_spinner">All venues</string>
    <string name="create_account">Create Account</string>
    <string name="i_am_an_admin">I am an admin</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="preference_file_key">com.example.softsignproj.customer_file</string>
    <string name="name_of_venue">Name of venue</string>
    <string name="manage_venues">Manage Venues</string>
    <string name="schedule_a_venue">Schedule a Venue</string>
    <string name="add_a_venue">Add a Venue</string>
    <string name="see_all_venues">See All Venues</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="my_events">My Events</string>
    <string name="add_venue_page_title">Add A New Venue</string>
    <string name="add_venue_name">Venue Name</string>
    <string name="add_venue_enter_sports_title">Enter Sports</string>
    <string name="list_of_sports_available">list of sports available:</string>
    <string name="schedule_an_activity">schedule an activity</string>
    <string name="sports_spinner_prompt">Select sport available for this venue</string>
    <string name="add_start_time">Select Start Time</string>
    <string name="add_start_date">Select Start Date</string>
    <string name="add_end_date">Select End Date</string>
    <string name="add_end_time">Select End Time</string>
    <string name="maximum_number_of_players">select maximum number of players</string>
    <string name="add_event_to_venue">add event to venue</string>
    <string name="sports_offered">Sports offered</string>
    <string name="enter">ENTER</string>
    <string name="name_of_sport">Name of sport</string>
    <string name="finish">FINISH</string>
    <string name="sport_at_venue_name">Sport at Venue Name</string>
    <string name="date">Date:</string>
    <string name="date_def">01/01/2022</string>
    <string name="start_time">Start Time:</string>
    <string name="start_time_def">00:00</string>
    <string name="end_time">End Time:</string>
    <string name="end_time_def">00:00</string>
    <string name="participants">Number of Participants:</string>
    <string name="participants_def">0/0</string>
    <string name="_0">0</string>
    <string name="my_joined_events">My Joined Events</string>
    <string name="see_scheduled_events">See Scheduled Events</string>
    <string name="nothing_to_see_here">Nothing to see here!</string>
    <string name="my_scheduled_events">My Scheduled Events</string>
    <string name="see_joined_events">See Joined Events</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="hh_mm">HH:MM</string>
    <string name="number_of_players">Number of Players:</string>
    <string name="remove_sport">Remove Sport</string>
    <string name="button">Button</string>
    <string name="sport_one_n_sport_two_n_sport_three">sport one \n sport two \n sport three</string>
    <string name="see_events_by_venue">See Events By Venue</string>
    <string name="add_another_venue">Add Another Venue</string>
    <string name="sign_out">Sign Out</string>
    <string name="see_all_events">See All Events</string>
    <string name="nullsportsorevents">Name cannot be \'null\', \'sports\' or \'events\'</string>
    <string name="scheduled">Scheduled</string>
    <string name="full">FULL</string>
    <string name="add_to_schedule">Add to schedule?</string>
    <string name="sport_name_warning_invalid">Sport names may only contain letters, digits and whitespaces</string>
    <string name="sport_name_warning_null">Sport names cannot be \'null\'</string>

</resources>