<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/eventsByVenueButton"
            android:icon="@drawable/ic_baseline_sort_by_alpha_24"
            android:title="@string/see_events_by_venue"
            android:checked="true" />
        <item
            android:id="@+id/addNewVenueButton"
            android:icon="@drawable/ic_baseline_add_box_24"
            android:title="@string/add_another_venue"
            android:checked="false" />
        <item
            android:id="@+id/signOutButton"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/sign_out"
            android:checked="false" />
    </group>
</menu>