<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AdminPage">

    <Button
        style="?attr/materialButtonStyle"
        android:id="@+id/manageVenueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:ems="10"
        android:enabled="true"
        android:text="@string/manage_venues"/>


    <Button
        style="?attr/materialButtonStyle"
        android:id="@+id/scheduleEventButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:gravity="center"
        android:enabled="true"
        android:text="@string/schedule_a_venue"/>


    <Button
        style="?attr/materialButtonStyle"
        android:id="@+id/addVenueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:gravity="center"
        android:enabled="true"
        android:text="@string/add_a_venue"/>


</LinearLayout>